--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.33.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
